2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* added modeldefs for columns and walls from munin
	* fixed paths for some models

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed the names of some materials and changed to low res textures

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Started to add columns, and fixed a dist build bug in the Makefile.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to remove building blocks and to create new construction from scratch.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't forget to copy .skeleton files.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the low res grass texture by default.

2005-03-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the more correct "License" 

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* added fence building blocks modelmappings
	* added campfire and fire modeldefs

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Cleaned up the logging a little bit more.

2005-03-23  Erik Hjortsberg  <erik@katastrof.nu>

	* moved and cleaned up the media definitions. Now almost all needed media is in svn. The directory media/common should point to the svn repository.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ember specific media and media definitions.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* decrease the minimum camera distance 

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* fixed erronous normal definitions

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* modified the S_LOG* macros and included the LogginService.h file in EmberOgrePrerequisites.h. The idea is to use the macros for all logging actions.

2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* removed pig and squirrel pack
	* added fence bblocks and a sty blueprint
	* fixed the way the BluePrint calculates the orientations of buildin blocks

2003-05-21 Miguel Guzman (Aglanor)

	* The merchant now makes a sound when he speaks.